@@ -249,7 +249,7 @@ input.btn_saveandnext
   color: #000;
 }
 
-input.btn_saveandclose
+input.atkdefaultbutton
 {
   font-weight: bold;
 }
